day 2 initial commits

--- a/5 - Quantum Gates (blank).ipynb
+++ b/5 - Quantum Gates (blank).ipynb
@@ -1,252 +1,116 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "399855b0",
-   "metadata": {},
-   "source": [
-    "# Introduction to Python\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36c4f14a",
-   "metadata": {},
-   "source": [
-    "## Basic Operations"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc436f9b",
+   "id": "4f0ecf5c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6231669f",
+   "id": "1c57bb2d",
    "metadata": {},
    "source": [
-    "It can store variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "792c292c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c049dbe",
-   "metadata": {},
-   "source": [
-    "## Basic Datatypes"
+    "# classical gates"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9cd5c178",
+   "id": "a36638a4",
    "metadata": {},
    "source": [
-    "It has several datatypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f0dd216",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "afa0751a",
-   "metadata": {},
-   "source": [
-    "Accessing values in a list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2634af4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9994c965",
-   "metadata": {},
-   "source": [
-    "## List vs. Tuple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae2314f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d35cd25",
-   "metadata": {},
-   "source": [
-    "lists can be edited, but tuples cannot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "120a0fb3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "787ac806",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3776fd4c",
-   "metadata": {},
-   "source": [
-    "## Dictionary\n",
-    "dictionaries are composed of keys and values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37412c69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b893c05",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2eab944",
-   "metadata": {},
-   "source": [
-    "# Coding Structures\n",
+    "## OR gate\n",
     "\n",
-    "if statement"
+    "*(how is this gate built in a classical computer?)*\n",
+    "\n",
+    "two connecting wires"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75b09e1a",
+   "id": "64b8560b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "359e280a",
+   "id": "72f48928",
    "metadata": {},
    "source": [
-    "for/while loops"
+    "## AND gate\n",
+    "\n",
+    "*(how is this gate built in a classical computer?)*\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Transistor"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3ef84f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e73c706e",
+   "id": "b094ce0a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "210f4369",
+   "id": "94e4ae63",
    "metadata": {},
    "source": [
-    "functions"
+    "## NOT gate\n",
+    "\n",
+    "*(how is this gate built in a classical computer?)\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Inverter_(logic_gate)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe83e62",
+   "id": "386dba97",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "926b678e",
+   "id": "094a7c9a",
    "metadata": {},
    "source": [
-    "## Import Statements"
+    "## XOR gate\n",
+    "\n",
+    "*(how is this gate built in a classical computer?)*\n",
+    "\n",
+    "combination of AND, NOT, and OR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7e21fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bee8a102",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c60d4b31",
+   "id": "e2eb30fd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "32c406ee",
+   "id": "fbdc517a",
    "metadata": {},
    "source": [
-    "# Algorithms Notes"
+    "## x gate (classical: NOT)\n",
+    "Features of the NOT gate:\n",
+    "* 0 --> 1\n",
+    "* 1 --> 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51bc40e7",
+   "id": "e76d883a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,41 +118,95 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae1a48e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b3fd355",
+   "id": "f71e292c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a0fc105d",
+   "id": "c4254288",
    "metadata": {},
    "source": [
-    "# Binary"
+    "## cnot gate (classical: XOR)\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Controlled_NOT_gate"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c78885d3",
+   "id": "7af8838d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6830edbf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "591759af",
+   "id": "ece83658",
    "metadata": {},
    "source": [
-    "binary is the building block of classical computers, because they encode information using either 'on' (1) or 'off' (0) using a **bit**"
+    "## Toffoli gate (classical: AND)\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Toffoli_gate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c38e731a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c500927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6590d8f1",
+   "metadata": {},
+   "source": [
+    "# Hadamard Gate (no classical analog)\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Hadamard_transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0caebcbf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "447467f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1496f539",
+   "metadata": {},
+   "source": [
+    "coin toss! (this is a complex problem in classical computing...)"
    ]
   }
  ],
