--- a/2 - Installing Qiskit (key).ipynb
+++ b/2 - Installing Qiskit (key).ipynb
@@ -21,78 +21,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting qiskit\n",
-      "  Downloading qiskit-0.37.0.tar.gz (13 kB)\n",
-      "Collecting qiskit-terra==0.21.0\n",
-      "  Downloading qiskit_terra-0.21.0-cp38-cp38-win_amd64.whl (6.3 MB)\n",
-      "Collecting qiskit-aer==0.10.4\n",
-      "  Downloading qiskit_aer-0.10.4-cp38-cp38-win_amd64.whl (24.2 MB)\n",
-      "Collecting qiskit-ibmq-provider==0.19.2\n",
-      "  Downloading qiskit_ibmq_provider-0.19.2-py3-none-any.whl (240 kB)\n",
+      "Requirement already satisfied: qiskit in c:\\users\\cropp\\anaconda3\\lib\\site-packages (0.37.0)\n",
+      "Requirement already satisfied: qiskit-terra==0.21.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit) (0.21.0)\n",
+      "Requirement already satisfied: qiskit-aer==0.10.4 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit) (0.10.4)\n",
+      "Requirement already satisfied: qiskit-ibmq-provider==0.19.2 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit) (0.19.2)\n",
       "Requirement already satisfied: scipy>=1.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-aer==0.10.4->qiskit) (1.6.2)\n",
       "Requirement already satisfied: numpy>=1.16.3 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-aer==0.10.4->qiskit) (1.20.3)\n",
-      "Requirement already satisfied: requests>=2.19 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (2.25.1)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (1.26.6)\n",
-      "Collecting websockets>=10.0\n",
-      "  Downloading websockets-10.3-cp38-cp38-win_amd64.whl (98 kB)\n",
-      "Collecting requests-ntlm>=1.1.0\n",
-      "  Downloading requests_ntlm-1.1.0-py2.py3-none-any.whl (5.7 kB)\n",
+      "Requirement already satisfied: requests-ntlm>=1.1.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (1.1.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (2.8.2)\n",
-      "Collecting websocket-client>=1.0.1\n",
-      "  Downloading websocket_client-1.3.3-py3-none-any.whl (54 kB)\n",
-      "Collecting tweedledum<2.0,>=1.1\n",
-      "  Downloading tweedledum-1.1.1-cp38-cp38-win_amd64.whl (1.1 MB)\n",
-      "Requirement already satisfied: sympy>=1.3 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (1.8)\n",
-      "Collecting retworkx>=0.11.0\n",
-      "  Downloading retworkx-0.11.0-cp38-cp38-win_amd64.whl (1.2 MB)\n",
-      "Collecting stevedore>=3.0.0\n",
-      "  Downloading stevedore-3.5.0-py3-none-any.whl (49 kB)\n",
-      "Requirement already satisfied: dill>=0.3 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (0.3.4)\n",
-      "Requirement already satisfied: ply>=3.10 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (3.11)\n",
+      "Requirement already satisfied: websockets>=10.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (10.3)\n",
+      "Requirement already satisfied: urllib3>=1.21.1 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (1.26.6)\n",
+      "Requirement already satisfied: websocket-client>=1.0.1 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (1.3.3)\n",
+      "Requirement already satisfied: requests>=2.19 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.19.2->qiskit) (2.25.1)\n",
       "Requirement already satisfied: psutil>=5 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (5.8.0)\n",
+      "Requirement already satisfied: sympy>=1.3 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (1.8)\n",
+      "Requirement already satisfied: dill>=0.3 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (0.3.4)\n",
+      "Requirement already satisfied: tweedledum<2.0,>=1.1 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (1.1.1)\n",
+      "Requirement already satisfied: ply>=3.10 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (3.11)\n",
+      "Requirement already satisfied: stevedore>=3.0.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (3.5.0)\n",
+      "Requirement already satisfied: retworkx>=0.11.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from qiskit-terra==0.21.0->qiskit) (0.11.0)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.0->qiskit-ibmq-provider==0.19.2->qiskit) (1.16.0)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from requests>=2.19->qiskit-ibmq-provider==0.19.2->qiskit) (2.10)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from requests>=2.19->qiskit-ibmq-provider==0.19.2->qiskit) (2021.10.8)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from requests>=2.19->qiskit-ibmq-provider==0.19.2->qiskit) (2.10)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from requests>=2.19->qiskit-ibmq-provider==0.19.2->qiskit) (4.0.0)\n",
-      "Collecting ntlm-auth>=1.0.2\n",
-      "  Downloading ntlm_auth-1.5.0-py2.py3-none-any.whl (29 kB)\n",
+      "Requirement already satisfied: ntlm-auth>=1.0.2 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.19.2->qiskit) (1.5.0)\n",
       "Requirement already satisfied: cryptography>=1.3 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.19.2->qiskit) (3.4.7)\n",
       "Requirement already satisfied: cffi>=1.12 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.19.2->qiskit) (1.14.6)\n",
       "Requirement already satisfied: pycparser in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from cffi>=1.12->cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.19.2->qiskit) (2.20)\n",
-      "Collecting pbr!=2.1.0,>=2.0.0\n",
-      "  Downloading pbr-5.9.0-py2.py3-none-any.whl (112 kB)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from sympy>=1.3->qiskit-terra==0.21.0->qiskit) (1.2.1)\n",
-      "Building wheels for collected packages: qiskit\n",
-      "  Building wheel for qiskit (setup.py): started\n",
-      "  Building wheel for qiskit (setup.py): finished with status 'done'\n",
-      "  Created wheel for qiskit: filename=qiskit-0.37.0-py3-none-any.whl size=12012 sha256=58269aac043f975cb76ebebba0ff8b744160c8cf5140214b54bab6be939592d6\n",
-      "  Stored in directory: c:\\users\\cropp\\appdata\\local\\pip\\cache\\wheels\\b5\\6a\\75\\aa79da63981473b77405655d932d66f29c57485d34f9c00d9e\n",
-      "Successfully built qiskit\n",
-      "Installing collected packages: pbr, tweedledum, stevedore, retworkx, ntlm-auth, websockets, websocket-client, requests-ntlm, qiskit-terra, qiskit-ibmq-provider, qiskit-aer, qiskit\n",
-      "  Attempting uninstall: websockets\n",
-      "    Found existing installation: websockets 9.0.1\n",
-      "    Uninstalling websockets-9.0.1:\n",
-      "      Successfully uninstalled websockets-9.0.1\n",
-      "Successfully installed ntlm-auth-1.5.0 pbr-5.9.0 qiskit-0.37.0 qiskit-aer-0.10.4 qiskit-ibmq-provider-0.19.2 qiskit-terra-0.21.0 requests-ntlm-1.1.0 retworkx-0.11.0 stevedore-3.5.0 tweedledum-1.1.1 websocket-client-1.3.3 websockets-10.3\n"
+      "Requirement already satisfied: pbr!=2.1.0,>=2.0.0 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from stevedore>=3.0.0->qiskit-terra==0.21.0->qiskit) (5.9.0)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\cropp\\anaconda3\\lib\\site-packages (from sympy>=1.3->qiskit-terra==0.21.0->qiskit) (1.2.1)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "    WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
@@ -116,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0f331d44",
    "metadata": {},
    "outputs": [
@@ -155,7 +118,24 @@
       "backports.tempfile                 1.0\n",
       "backports.weakref                  1.0.post1\n",
       "basemap                            1.2.1\n",
-      "bcrypt                             3.2.0\n",
+      "bcrypt                             3.2.0"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "beautifulsoup4                     4.9.3\n",
       "bitarray                           2.1.0\n",
       "bkcharts                           0.2\n",
@@ -276,24 +256,7 @@
       "lazy-object-proxy                  1.6.0\n",
       "libarchive-c                       2.9\n",
       "llvmlite                           0.36.0\n",
-      "locket                             0.2.1"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\cropp\\anaconda3\\lib\\site-packages)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "locket                             0.2.1\n",
       "loky                               3.1.0\n",
       "lowess                             1.0.3\n",
       "lxml                               4.6.3\n",
@@ -539,13 +502,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ec81eb66",
    "metadata": {},
    "outputs": [],
    "source": [
     "import qiskit"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "317e21c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
